--- a/todov3/package.json
+++ b/todov3/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.3.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
